--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,7 @@ body{
     background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0)), url(/images/image-hero-desktop.jpg);
     height: 50vh;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 .navBar{
     display: flex;
