--- a/CSS/style.css
+++ b/CSS/style.css
@@ -173,6 +173,7 @@ margin-bottom: 40px;
     margin-top: 30px;
     border-radius: 10px;
     padding: 32px;
+    font-weight: 500px;
 }
 
 .backthisProjectColumn2{
